; ModuleID = '/home/carl/AnghaBench/linux/drivers/soc/ti/extr_wkup_m3_ipc.c_wkup_m3_ctrl_ipc_read.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/soc/ti/extr_wkup_m3_ipc.c_wkup_m3_ctrl_ipc_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wkup_m3_ipc = type { i64 }

@AM33XX_CTRL_IPC_REG_COUNT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"ipc register operation out of range\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.wkup_m3_ipc*, i32)* @wkup_m3_ctrl_ipc_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wkup_m3_ctrl_ipc_read(%struct.wkup_m3_ipc* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.wkup_m3_ipc*, align 8
  %5 = alloca i32, align 4
  store %struct.wkup_m3_ipc* %0, %struct.wkup_m3_ipc** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = icmp slt i32 %6, 0
  br i1 %7, label %12, label %8

8:                                                ; preds = %2
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @AM33XX_CTRL_IPC_REG_COUNT, align 4
  %11 = icmp sgt i32 %9, %10
  br label %12

12:                                               ; preds = %8, %2
  %13 = phi i1 [ true, %2 ], [ %11, %8 ]
  %14 = zext i1 %13 to i32
  %15 = call i64 @WARN(i32 %14, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0))
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %12
  store i32 0, i32* %3, align 4
  br label %26

18:                                               ; preds = %12
  %19 = load %struct.wkup_m3_ipc*, %struct.wkup_m3_ipc** %4, align 8
  %20 = getelementptr inbounds %struct.wkup_m3_ipc, %struct.wkup_m3_ipc* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i32, i32* %5, align 4
  %23 = call i64 @AM33XX_CTRL_IPC_REG_OFFSET(i32 %22)
  %24 = add nsw i64 %21, %23
  %25 = call i32 @readl(i64 %24)
  store i32 %25, i32* %3, align 4
  br label %26

26:                                               ; preds = %18, %17
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i64 @WARN(i32, i8*) #1

declare dso_local i32 @readl(i64) #1

declare dso_local i64 @AM33XX_CTRL_IPC_REG_OFFSET(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
